--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,43 @@
+# Node modules
+node_modules/
+backend/node_modules/
+
+# Build / dev output
+dist/
+build/
+.vite/
+.vitepress/
+
+# Environment (do not commit secrets)
+.env
+.env.local
+.env.*.local
+/backend/.env
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+debug.log
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS / Editor files
 .DS_Store
+Thumbs.db
+.vscode/
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+
+# Testing / coverage
+coverage/
+coverage-final.json
+.nyc_output/
+
+# Misc
+.cache/
+.tmp/
+*.log
+*.bak
